# CPP_Exercises

./: CMakeLists.txt  bonjour
tp1/: TP1.md
tp1/ex1/: main  main.cpp
tp1/ex2/: Person.cpp  Person.hpp  main  main.cpp
tp10/: TP10.md
tp10/src/: image.hpp  mandelbrot.cpp  midgray.cpp  pixels.hpp
tp2/: Card.cpp  Card.hpp  Player.cpp  Player.hpp  main.cpp
tp3/: TP3.md
tp3/3-hrsoft/: HRSoftTests.cpp
tp3/3-hrsoft/HRSoft/: Department.hpp  Employee.hpp  HRSoftSystem.hpp
tp4/backup/ex1-qcm/: qcm.hpp
tp4/backup/ex2-13-print-concat/: PhoneBookEntry.hpp
tp4/backup/ex2-21-phone-book-entry/: PhoneBook.hpp
tp4/backup/ex3-01-types/: 01-types.hpp
tp4/ex1/tests/: qcm.cpp
tp4/ex2/src/: PhoneNumber.hpp
tp4/ex3/src/: 01-types.hpp
tp5/: CMakeCache.txt  Makefile  TP5.md  cmake_install.cmake
tp5/2-ptr/: CopyablePtr.hpp  main.cpp
tp6/1-recipes/: Material.hpp  ProgramData.cpp  ProgramData.hpp  Recipe.hpp
tp7/: TP7.md
tp7/dungeon/: Character.hpp  Dungeon.cpp  Entity.hpp  Item.hpp  Potion.hpp  Trap.hpp
tp8/backup/ex2-01-ptr-alias/: StringInstancePair.hpp
tp8/backup/ex2-11-stable/: StringInstancePair.hpp
tp8/backup/ex2-12-destr1/: StringInstancePair.hpp
tp9/: TP9.md
tp9/exo2/: Compiler Explorer C++ Editor #1 Code(1).cpp  Compiler Explorer C++ Editor #1 Code(2).cpp  Compiler Explorer C++ Editor #1 Code(3).cpp  Compiler Explorer C++ Editor #1 Code(4).cpp  Compiler Explorer C++ Editor #1 Code(5).cpp  Compiler Explorer C++ Editor #1 Code.cpp
tp9/exo3/: Compiler Explorer C++ Editor #1 Code(6).cpp
tp9/exo4/: Compiler Explorer C++ Editor #1 Code(7).cpp
(+9 files in other folders)
